Init custom text entry implementation

--- a/SampleNote/MainPage.xaml
+++ b/SampleNote/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:SampleNote.Components"
              x:Class="SampleNote.MainPage">
 
     <ScrollView>
@@ -30,6 +31,11 @@
                 SemanticProperties.Hint="Counts the number of times you click"
                 Clicked="OnCounterClicked"
                 HorizontalOptions="Fill" />
+
+            <controls:FloatingLabelEntry
+                LabelText="Nom d'utilisateur" 
+                Placeholder="Entrez votre nom"
+                Text="Username" />
         </VerticalStackLayout>
     </ScrollView>
 
